--- a/R/actividades/11_actividad.Rmd
+++ b/R/actividades/11_actividad.Rmd
@@ -16,7 +16,8 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r cars}
-summary(cars)
+# Utiliza el comando summary para mostrar un resumen general de cars
+
 ```
 
 ## Including Plots
@@ -24,7 +25,8 @@ summary(cars)
 You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
-plot(pressure)
+# Utiliza el comando plot para visualizar pressure en un gráfico
+
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
