--- a/R/modulo1_tema4_R.Rmd
+++ b/R/modulo1_tema4_R.Rmd
@@ -1,5 +1,5 @@
 ---
-title: 'MÓDULO: HERRAMIENTAS BIG DATA'
+title: 'MÓDULO 1: HERRAMIENTAS BIG DATA'
 author: "Ferran Carrascosa Mallafrè"
 date: "Licenciado en Matemáticas por la Universidad de Barcelona. Data Scientist"
 output:
@@ -11,11 +11,11 @@ output:
     toc: yes
     toc_depth: '6'
     df_print: paged
-subtitle: 'Tema: Herramientas de análisis: Programación en R'
+subtitle: 'TEMA 4.1. HERRAMIENTAS DE ANALISIS: PROGRAMACIÓN EN R'
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.path="www/")
+knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
 library(pander)
 library(kableExtra)
@@ -30,41 +30,46 @@ options(knitr.kable.NA = '')
 #  Reemplazar > expresiones regulares > ##.*
 ```
 
-<br>
+# PROGRAMACIÓN EN R
 
-# Objetivos específicos
-
-<br>
-
-- Realizar operaciones de lectura y escritura de datos con R.
-- Saber escoger la estructura de datos de R adecuada para cada problema.
-- Tener las bases para realizar análisis descriptivo mediante tablas y gráficos en R.
-- Desarrollar pequeñas piezas de código en R.
-
-<br>
-
-# 1. Programación en R
-
-<br>
-
-## 1.1. Introducción
-
-<br>
+## INTRODUCCIÓN
 
 El *Data science* permite transformar datos en conocimiento. El objetivo es aprender a utilizar las mejores herramientas disponibles en R para el *data science*.
 
-<br>
+## ACTIVIDAD GUIADA 1
 
-## 1.2. Actividad guiada 1
+La actividad guiada, que resolveremos a lo largo de este temario consiste en comprender la evolución de la riqueza y la esperanza de vida de las personas a nivel de país y continente.
 
-<br>
+Para ello, contamos con los datos de [países](https://www.rdocumentation.org/packages/datos/versions/0.3.0/topics/paises) coleccionados por [Gapminder](https://www.gapminder.org/) y traducidos al Castellano en el package [datos](https://cran.r-project.org/web/packages/datos/index.html).  
 
-Ve al documento de la actividad guiada 1 de Programación en R y lee la exposición de la tarea.
+```{r}
+library(datos)
+paises07 <- as.data.frame(paises %>% filter(anio==2007))
+```
+
+```{r, eval=FALSE}
+paises07 %>% head(10)
+```
+
+```{r echo=FALSE, results='hide', warning=FALSE}
+kable(paises07%>%head(10), "html", booktabs=TRUE) %>%
+  kable_styling(bootstrap_options=c("striped", "hover", "condensed", "responsive")
+                ,font_size = 11,full_width = F) %>%
+  save_kable("www/pasies07.png")
+```
+
+![Fuente: http://www.gapminder.org/data/](www/pasies07.png){width=400px}
+
+Los datos muestran la esperanza de vida media en 142 países, población total y su nivel de riqueza medido con el [Producto Interior Bruto (PIB)](https://es.wikipedia.org/wiki/Producto_interno_bruto) per cápita.
+
+> \<recuerda\>El PIB per cápita se puede interpretar como el Salario medio que recibe cada persona del país.\</recuerda\>
+
+Para el análisis, el continente se recodificará incorporando Oceanía con Asia. 
+
+Para realizar el informe, nos apoyaremos en el package Rmarkdown.
 
 ```{r,child=c('modulo1_tema4_R_01_elem_bas.Rmd','modulo1_tema4_R_02_ggplot2.Rmd','modulo1_tema4_R_03_colec_obj.Rmd','modulo1_tema4_R_04_contr_flujo.Rmd','modulo1_tema4_R_05_gest_dat.Rmd')}
 ```
-
-<br>
 
 ```{r, child='README.md'}
 ```
