--- a/R/actividades/Solucion/11_actividad_solucion.Rmd
+++ b/R/actividades/Solucion/11_actividad_solucion.Rmd
@@ -16,6 +16,7 @@ This is an R Markdown document. Markdown is a simple formatting syntax for autho
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
 
 ```{r cars}
+# Utiliza el comando summary para mostrar un resumen general de cars
 summary(cars)
 ```
 
@@ -24,6 +25,7 @@ summary(cars)
 You can also embed plots, for example:
 
 ```{r pressure, echo=FALSE}
+# Utiliza el comando plot para visualizar pressure en un gráfico
 plot(pressure)
 ```
 
