--- a/R/modulo1_tema4_R_02_ggplot2.Rmd
+++ b/R/modulo1_tema4_R_02_ggplot2.Rmd
@@ -1,5 +1,5 @@
 ```{r include=FALSE}
-knitr::opts_chunk$set(echo = TRUE, fig.path="www/")
+knitr::opts_chunk$set(echo = TRUE)
 library(knitr)
 library(pander)
 library(kableExtra)
@@ -15,91 +15,57 @@ options(knitr.kable.NA = '')
 #  Reemplazar > expresiones regulares > ##.*
 ```
 
-<br>
-
-## 1.4. Gráficos con GGPLOT2
-
-<br>
+## GRÁFICOS CON GGPLOT2
 
 > \<cita\>Un simple gráfico ha brindado más información a la mente del analista de datos que cualquier otro dispositivo. - John Tukey\</cita\>
 
-<br>
-
 #### ESTRUCTURA BÁSICA DE GGPLOT2
-
-<br>
 
 ggplot2 es un sistema coherente para hacer gráficos.
 
-<br>
-
-```{r plot3, fig.width=3.2, fig.asp=4/5, fig.cap="Grafico de puntos. (plot3-1.png)"}
+```{r fig.width=3.2, fig.asp=4/5, fig.cap="grafico de puntos"}
 library(ggplot2)
 ggplot(data = pressure) +  
   geom_point(mapping = aes(x = temperature, y = pressure))
 ```
 
-<br>
-
 Los componentes mínimos son:
 
-- `ggplot` define el conjunto de datos en el parámetro `data` que debería contener todas las columnas del gráfico.
+- `ggplot` define el conjunto de datos en el parámetro `data` que debería contener todas las variables del gráfico.
 - `geom_<función>`: Define el tipo de gráfico. Por ejemplo, *geom_point* es un gráfico de puntos.
 - `mapping`: define mapeo de parámetros estéticos (`x`, `y`...) a través de la función `aes()`.
 
-<br>
-
 A diferencia de `plot`, `ggplot` permite asignar el gráfico a un objeto R.
-
-<br>
 
 ```{r}
 p1 <- ggplot(data = pressure, mapping = aes(x = temperature, y = pressure)) +
   geom_point()
 ```
 
-<br>
-
 Posteriormente, puedes añadirle otros elementos gráficos.
-
-<br>
 
 ```{r}
 p1 <- p1 + geom_line()
 ```
 
-<br>
-
 > \<importante\>Si defines el mapeo de estéticos en `ggplot` ya no es necesario definirlos en los geoms\</importante\>
 
-<br>
-
 Para añadir títulos a los ejes utiliza `labs()`.
-
-<br>
 
 ```{r}
 p1 <- p1 +   labs(title = "Presión de vapor del mercurio"
                   , x = "Temperatura (ºC)", y = "Presión (mm de Hg)")
 ```
 
-<br>
-
 Para obtener el plot, ejecuta el objeto.
 
-<br>
-
-```{r plot4, fig.width=3.2, fig.asp=4/5, fig.cap="Grafico de líneas y puntos. (plot4-1.png)"}
+```{r fig.width=3.2, fig.asp=4/5, fig.cap="grafico de líneas y puntos"}
 p1
 ```
 
-<br>
-
 Para añadir graduación continua del color por temperatura. 
 
-<br>
-
-```{r plot5, fig.width=4.7, fig.asp=4/7, fig.cap="Escala de color contínua. (plot5-1.png)"}
+```{r fig.width=4.7, fig.asp=4/7, fig.cap="Escala de color contínua"}
 p1 <- ggplot(data = pressure, mapping = aes(x = temperature, y = pressure
     , color = temperature)) +
   geom_point() +
@@ -110,15 +76,10 @@ p1 <- ggplot(data = pressure, mapping = aes(x = temperature, y = pressure
 p1
 ```
 
-<br>
 
 #### OTROS GEOMS
 
-<br>
-
 Otros ejemplos de geoms con los datos de países en 2007.
-
-<br>
 
 ```{r warnings=FALSE, message=FALSE}
 library(ggrepel)
@@ -140,48 +101,48 @@ p4 <- ggplot(paises07 %>% arrange(desc(esperanza_de_vida)) %>% head(25),
   geom_label_repel(aes(label=pais), size=3)
 ```
 
-<br>
-
-```{r plot6,  echo=FALSE, fig.width=11, fig.height=5, warning=FALSE, message=FALSE, fig.cap="Galería GGPLOT2. (plot6-1.png)"}
+```{r echo=FALSE, fig.width=11, fig.height=5, warning=FALSE, message=FALSE}
 suppressPackageStartupMessages(library(cowplot))
 # arrange two plots into one column
 plot_grid(p1, p2, p3, p4,
   labels = c("histograma","barras","boxplot","Etiquetas"), ncol = 2)
 ```
 
-<br>
-
 #### OTROS ELMENTOS GRÁFICOS
-
-<br>
 
 Otros elementos a tener en cuenta en la presentación: 
 
-- Crear un panel de gráficos: `facet_wrap()`  y `facet_grid()` 
--	Etiquetas y anotaciones: `annotate()`, `geom_text()`, `geom_label()`, `geom_label_repel()`.
--	Valores de los ejes: `scale_x_continuous()` y `scale_x_log10()`.
-- Colores: `scale_colour_discrete()`, `scale_colour_brewer()`...
--	Zoom: Importante, utiliza xlim e ylim en: `coord_cartesian()`.
--	Temas: Personalizar aspecto con `theme()`, `theme_bw()`...
-- Interactivos: packages [gganimate](https://gganimate.com/),  [plotly](https://plotly.com/r/)...
+- Permite crear un panel de gráficos utilizando variables de segmentación: `facet_wrap()`  y `facet_grid()` 
+-	Insertar etiquetas y anotaciones de texto: consulta la función `annotate()`, `geom_text()`, `geom_label()`, `geom_label_repel()`.
+-	Escalas: Permite cambiar los valores de los ejes. Por ejemplo, consulta `scale_x_continuous()` y `scale_x_log10()`.
+- Colores: Para cambiar las paletas de colores consulta `scale_colour_discrete()`, `scale_colour_brewer()`, `scale_colour_manual()`, `scale_fill_viridis()`, `scale_colour_gradient()`...
+-	Zoom: Importante, para realizar zoom utiliza xlim e ylim en: `coord_cartesian()`.
+-	Temas: Personaliza posición de la leyenda y resto de elementos gráficos, tamaños colores, fuente... Consulta: `theme()` y `theme_bw()`.
+- Interactivos: packages [gganimate](https://gganimate.com/) y [plotly](https://plotly.com/r/).
 
-<br>
-
-Amplia la lectura en:
+Para ampliar la lectura consulta:
 
 - [R for Data Science](https://r4ds.had.co.nz/) from Garrett Grolemund and Hadley Wickham.
 - [ggplot2: Elegant Graphics for Data Analysis](https://ggplot2-book.org/) de Hadley Wickham.
 - [ggplot2 extensions guide](https://exts.ggplot2.tidyverse.org/gallery/) lista los paquetes que extienden `ggplot2`.
 - La [{ggplot2} cheat sheet](https://www.statsandr.com/blog/files/ggplot2-cheatsheet.pdf).
 
-<br>
 
 ##### ACTIVIDAD GUIADA 1.3.
 
-<br>
+Mejora el Crea un resumen HTML de la `esperanza_de_vida` y el `pib_per_capita` en 2007 con datos de `paises` del package `datos`.
 
-Mejora el Crea un resumen HTML de la esperanza_de_vida y el pib_per_capita en 2007 con la actividad guiada 1.3.
+Para ello abre el fichero `13_actividad.Rmd y completa los apartados solicitados entre \< ... \> .
 
-<br>
+Genera el informe HTML con el botón **Knit**.
 
-> \<sabías que\>Hans Rosling de Gapminder utilizó un gráfico muy parecido al de la actividad , añadiendo un quinto eje (el tiempo) en una famosa conferencia [TED Talk](https://www.ted.com/talks/hans_rosling_the_best_stats_you_ve_ever_seen) (14,6M de visualizaciones). Dedícale 1 minuto a ver la simulación dándole al botón de play (abajo izquierda), en el [siguiente enlace](https://www.gapminder.org/tools/#$chart-type=bubbles). La herramienta utilizada Trendalyzer fue posteriormente adquirida por Google.\</sabías que\>
+Observa:
+
+- Se han añadido parámetros estéticos: `color` y `size`.
+- La escala del eje x (pib_per_capita) se ha transformado a escala logarítmica con `scale_x_log10()`.
+- Se ha definido un panel temporal con `facet_wrap()` 
+- Hay que imprimir el gráfico con `print()`
+
+Adapta los comentarios a la nueva información y regenera el informe.
+
+> \<sabías que\>Hans Rosling de Gapminder utilizó un gráfico muy parecido a éste, añadiendo un quinto eje (el tiempo) en una famosa conferencia [TED Talk](https://www.ted.com/talks/hans_rosling_the_best_stats_you_ve_ever_seen) (14,6M de visualizaciones). Dedícale 1 minuto a ver la simulación dándole al botón de play (abajo izquierda), en el [siguiente enlace](https://www.gapminder.org/tools/#$chart-type=bubbles). La herramienta utilizada Trendalyzer fue posteriormente adquirida por Google.\</sabías que\>
